[project]
name = "mcp-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "mcp>=1.1.2",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git" }
